--- a/M01S01/ex06/index.html
+++ b/M01S01/ex06/index.html
@@ -19,7 +19,33 @@
 
 <body>
 
+  <form
+    class="sphere-area"
+    action=""
+  >
+    <fieldset>
+      <legend>Suprafata Sferei</legend>
 
+      <label for="radius">Raza:</label>
+      <input
+        type="text"
+        name="radius"
+        id="radius"
+        placeholder="Raza"
+      >
+
+      <br> <br>
+
+      <button
+        type="submit"
+        title="Calculeaza"
+      >Calculeaza</button>
+
+      <p>
+        Rezultat: <span id="result"></span>
+      </p>
+    </fieldset>
+  </form>
 
   <script src="app.js"></script>
 
