--- a/M01S01/ex03/index.html
+++ b/M01S01/ex03/index.html
@@ -7,7 +7,7 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   >
-  <title>Calculator suprafete</title>
+  <title>Calculator Arie Dreptunghi</title>
 
   <link
     rel="stylesheet"
@@ -18,6 +18,53 @@
 </head>
 
 <body>
+  <form
+    class="rectangle-area"
+    action=""
+  >
+    <fieldset>
+      <legend>Calculator Arie Dreptunghi</legend>
+
+      <label for="length">Lungime:</label>
+      <input
+        type="text"
+        name="length"
+        id="length"
+        placeholder="Lungime"
+      >
+
+      <br> <br>
+
+      <label for="width">Latime:</label>
+      <input
+        type="text"
+        name="width"
+        id="width"
+        placeholder="Latime"
+      >
+
+      <br></br>
+
+      <label for="height">Inaltime:</label>
+      <input
+        type="text"
+        name="height"
+        id="height"
+        placeholder="Inaltime"
+      >
+
+      <br> <br>
+
+      <button
+        type="submit"
+        title="Calculeaza"
+      >Calculeaza</button>
+
+      <p>
+        Rezultat: <span id="result"></span>
+      </p>
+    </fieldset>
+  </form>
 
 
 
