--- a/M01S02/ex03/index.html
+++ b/M01S02/ex03/index.html
@@ -14,12 +14,21 @@
   <title>Document</title>
 </head>
 
-<body>
+<!-- <body onload="console.log(prompt('Care este numele tau?'));"> -->
+
+<body onload="alert('Bine ai venit in acest site!');">
+
+  <!-- <button
+    title="Hello!"
+    onclick="console.log('Hello World');"
+  >Hello!</button> -->
 
   <button
     title="Hello!"
-    onclick="console.log('Hello World');"
+    onclick="alert('Bine ai venit la Pixellab!');"
   >Hello!</button>
+
+
 </body>
 
 </html>
