--- a/M01S02/ex03/index.html
+++ b/M01S02/ex03/index.html
@@ -18,15 +18,31 @@
 
 <body onload="alert('Bine ai venit in acest site!');">
 
-  <!-- <button
+  <button
     title="Hello!"
     onclick="console.log('Hello World');"
-  >Hello!</button> -->
+  >Hello!</button>
 
   <button
     title="Hello!"
     onclick="alert('Bine ai venit la Pixellab!');"
   >Hello!</button>
+
+  <button
+    title="Hello!"
+    onclick="alert('Bine ai apasat pe acest buton!');"
+  >Hello!</button>
+
+  <button
+    title="sum"
+    onclick="console.log(20 + 156);"
+  >Suma</button>
+
+  <button
+    title="press the button"
+    onmouseover="console.log('Apasa-ma!');"
+    onclick="alert('M-ai apasat!');"
+  >Apasa-ma!</button>
 
 
 </body>
