--- a/M01S02/ex05/index.html
+++ b/M01S02/ex05/index.html
@@ -17,10 +17,29 @@
   <script src="https://pixellab.ro/js/pixeltab/static/js/pixeltab-top.js"></script>
 </head>
 
-<body>
+<!-- <body onload="alert('Bine ai venit!');"> -->
 
+<body onload="console.log(prompt('Bine ai venit! Cum te cheama?'));">
 
+  <h1 onclick="alert('Care este numele tau?');">Hello</h1>
 
+  <button
+    title="press the button"
+    onclick="console.log('Am fost apasat!');"
+  >Apasa-ma!</button>
+
+  <button
+    title="press the button"
+    onclick="alert('Butonul a fost apasat!')"
+  >Apasa-ma!</button>
+
+  <button
+    title="press the button"
+    onmouseover="console.log('Ai vrea sa apesi acest buton?');"
+    onclick="console.log(prompt('Care este numele tau?'));"
+  >Apasa-ma!</button>
+
+  <script src="app.js"></script>
 
   <div
     class="pixeltab-host"
