--- a/M01S06/ex03/index.html
+++ b/M01S06/ex03/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <meta charset="utf-8" />
-    <title>User Agent</title>
-    <script src="app.js"></script>
+  <meta charset="UTF-8">
+  <meta
+    http-equiv="X-UA-Compatible"
+    content="IE=edge"
+  >
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  >
+  <title>DOM loaded</title>
+
 </head>
+
 <body>
-  
-  <button>Click Me</button>
+
+
+  <button
+    type="button"
+    title="Click me"
+  >Click me</button>
+  <script src="app.js"></script>
 </body>
+
 </html>
