--- a/M01S05/ex08/index.html
+++ b/M01S05/ex08/index.html
@@ -11,6 +11,10 @@
   <button id="clicker">Clicker</button>
   <button id="remove">Elimina evenimentul</button>
 
+  <button id="query">Query</button>
+  <p id="message">varsta ta va aparea aici</p>
+
+
   <script src="app.js"></script>
 </body>
 
