--- a/M02S02/ex02/index.html
+++ b/M02S02/ex02/index.html
@@ -87,6 +87,53 @@
         title="Adauga animal"
       >Adauga animal</button>
     </fieldset>
+
+    <br><br>
+
+    <input
+      type="checkbox"
+      name="has-friends"
+      id="has-friends"
+    >
+    <label for="has-friends">Are prieteni</label>
+    <fieldset
+      style="display: none"
+      class="friend-fieldset"
+    >
+
+      <legend>Prieteni</legend>
+
+      <label for="friend-name">Nume prieten</label>
+      <input
+        type="text"
+        name="friend-name"
+        id="friend-name"
+      >
+
+      <br><br>
+      <label for="friend-surname">Prenume prieten</label>
+      <input
+        type="text"
+        name="friend-surname"
+        id="friend-surname"
+      >
+
+      <br><br>
+
+      <label for="friend-age">Varsta prieten</label>
+      <input
+        type="number"
+        name="friend-age"
+        id="friend-age"
+      >
+
+      <br><br>
+      <button
+        type="button"
+        title="Adauga prieten"
+      >Adauga prieten</button>
+    </fieldset>
+  </form>
   </form>
 </body>
 
