--- a/M02S04/ex01/index.html
+++ b/M02S04/ex01/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <title>CSS animation in JavaScript</title>    
-    <style>
-      .box {
-        width: 100px;
-        height: 100px; 
-        background-color: red;
-        transition: background-color 1s ease;
-      }
 
-      .animate-class {
-        background-color: green;
-      }
-    </style>
+<head>
+  <script src="app.js"></script>
+  <meta charset="utf-8" />
+  <title>CSS animation in JavaScript</title>
+  <style>
+    .box {
+      width: 100px;
+      height: 100px;
+      background-color: red;
+      transition: background-color 1s ease;
+    }
+
+    .animate-class {
+      background-color: green;
+    }
+
+  </style>
 </head>
+
 <body>
-  
+
   <div class="box"></div>
 
-  <script src="app.js"></script>
+  <button
+    type="button"
+    title="Aplica"
+    class="applyButton"
+  >Aplica</button>
 </body>
+
 </html>
