debounce mediaQuery innerWidth animation dynamicButton axis

--- a/M02S04/ex01/index.html
+++ b/M02S04/ex01/index.html
@@ -29,6 +29,13 @@
     title="Aplica"
     class="applyButton"
   >Aplica</button>
+
+  <button
+    type="button"
+    title="Intuneca"
+    class="darkButton"
+  >Intuneca</button>
+
 </body>
 
 </html>
