--- a/M02S04/ex02/index.html
+++ b/M02S04/ex02/index.html
@@ -20,13 +20,42 @@
 </head>
 
 <body>
+  <form class="colorBox">
+    <div class="box">
+      <label for="box1Button">stilizeaza aceasta cutie</label>
+      <input
+        class="boxRadio"
+        type="radio"
+        name="boxRadio"
+        id="box1Button"
+        checked
+      >
+    </div>
 
-  <div class="box"></div>
+    <div class="box">
+      <label for="box2Button">stilizeaza aceasta cutie</label>
+      <input
+        class="boxRadio"
+        type="radio"
+        name="boxRadio"
+        id="box2Button"
+      >
+    </div>
+
+    <div class="box">
+      <label for="box3Button">stilizeaza aceasta cutie</label>
+      <input
+        class="boxRadio"
+        type="radio"
+        name="boxRadio"
+        id="box3Button"
+      >
+    </div>
+  </form>
 
   <button type="button">Red</button>
   <button type="button">Green</button>
   <button type="button">Blue</button>
-
 
   <form class="dynamicColorForm">
     <button type="button">Color</button>
