--- a/M02S04/ex03/index.html
+++ b/M02S04/ex03/index.html
@@ -45,6 +45,26 @@
       position: absolute
     }
 
+    .NW {
+      transform: rotate(-45deg);
+      margin: 10px;
+    }
+
+    .NE {
+      transform: rotate(45deg);
+      margin: 10px;
+    }
+
+    .SW {
+      transform: rotate(45deg);
+      margin: 10px;
+    }
+
+    .SE {
+      transform: rotate(-45deg);
+      margin: 10px;
+    }
+
   </style>
 </head>
 
@@ -65,7 +85,20 @@
     <div class="row">
       <button class="S">⬇️</button>
     </div>
+
+    <br><br>
+    <div class="row">
+      <button class="NW">⬆️</button>
+      <button class="NE">⬆️</button>
+    </div>
+    <div class="row">
+      <button class="SW">⬇️</button>
+      <button class="SE">⬇️</button>
+    </div>
   </div>
+
+
+
 
   <script src="app.js"></script>
 </body>
