--- a/M01S02/ex05/index.html
+++ b/M01S02/ex05/index.html
@@ -11,33 +11,39 @@
 
   <link
     rel="stylesheet"
-    href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
+    href="https://tab.pixellab.ro/pixeltab.css"
   >
 
-  <script src="https://pixellab.ro/js/pixeltab/static/js/pixeltab-top.js"></script>
+  <script src="https://tab.pixellab.ro/pixeltab-top.js"></script>
 </head>
 
 <!-- <body onload="alert('Bine ai venit!');"> -->
 
-<body onload="console.log(prompt('Bine ai venit! Cum te cheama?'));">
+<body onload="console.log(prompt('Bine ai venit, cati ani ai?'));">
 
-  <h1 onclick="alert('Care este numele tau?');">Hello</h1>
-
-  <button
-    title="press the button"
-    onclick="console.log('Am fost apasat!');"
-  >Apasa-ma!</button>
+  <h1 onclick="alert('Invat JavaScript la Pixellab.');">Hello</h1>
 
   <button
-    title="press the button"
-    onclick="alert('Butonul a fost apasat!')"
-  >Apasa-ma!</button>
+    title="Afiseaza in consola textul"
+    onclick="console.log('Am fost apasat');"
+  >Consola</button>
+
+  <button
+    title="Afiseaza in alerta textul"
+    onclick="alert('Butonul a fost apasat')"
+  >Alert</button>
+
+  <button
+    title="Confirmare"
+    onmouseover="console.log('Ai vrea sa apesi acest buton?');"
+    onclick="console.log(prompt('Care este numele tau?'));"
+  >Confirmare</button>
 
   <button
     title="press the button"
     onmouseover="console.log('Ai vrea sa apesi acest buton?');"
     onclick="console.log(prompt('Care este numele tau?'));"
-  >Apasa-ma!</button>
+  >Confirmare</button>
 
   <script src="app.js"></script>
 
@@ -45,7 +51,7 @@
     class="pixeltab-host"
     id="js01-02-05"
   ></div>
-  <script src="https://pixellab.ro/js/pixeltab/static/js/pixeltab.js"></script>
+  <script src="https://tab.pixellab.ro/static/js/pixeltab.js"></script>
 </body>
 
 </html>
