--- a/M01S06/ex07/index.html
+++ b/M01S06/ex07/index.html
@@ -7,20 +7,23 @@
 
   <link
     rel="stylesheet"
-    href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
+    href="https://tab.pixellab.ro/pixeltab.css"
   >
 
-  <script src="https://pixellab.ro/js/pixeltab/static/js/pixeltab-top.js"></script>
+  <script src="https://tab.pixellab.ro/pixeltab-top.js"></script>
 </head>
 
 <body>
-
+  <script>
+    let myGuess = 6;
+    console.log(typeof myGuess === 'number')
+  </script>
 
   <div
     class="pixeltab-host"
     id="js01-06-07"
   ></div>
-  <script src="https://pixellab.ro/js/pixeltab/static/js/pixeltab.js"></script>
+  <script src="https://tab.pixellab.ro/static/js/pixeltab.js"></script>
 </body>
 
 </html>
